# django-ninja-knox

./: README.md  conftest.py  pyproject.toml  test_data.yaml  tox.ini
ninja_knox/: admin.py  apps.py  auth.py  models.py  router.py  schemas.py  settings.py  views.py
ninja_knox/migrations/: 0001_initial.py
tests/: settings.py  test_auth.py  test_models.py  test_settings.py  test_views.py
